기상청 값 redis에 캐시, 경고, 경고 알람 등
